--- a/Funtion/LT-Funtion/Bai5.html
+++ b/Funtion/LT-Funtion/Bai5.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <p id="result"></p>
     <script>
       let arr = [
         "Polaris",
@@ -27,12 +28,19 @@
         "Leo",
       ];
 
-      function find(str) {
-        if (arr.indexOf(str) !== -1) {
-          return arr2[arr.indexOf(str)];
-        } else return "Not found";
+      function find() {
+        let search = prompt("Find Star");
+        let result = document.getElementById("result");
+        for (i = 0; i <= arr.length; i++) {
+          if (search == arr[i]) {
+            result.innerHTML = arr2[i];
+            return;
+          } else {
+            result.innerHTML = "Không tìm thấy dữ liệu";
+          }
+        }
       }
-      alert(find("Vega"));
+      find();
     </script>
   </body>
 </html>
