--- a/HTML/BT-SimpleForm/BTtaobangnangcaoPart2.html
+++ b/HTML/BT-SimpleForm/BTtaobangnangcaoPart2.html
@@ -1,76 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tạo bảng nâng cao</title>
-</head>
-<body>
-    <h1 style="color: blue;">Tháng 10 - October</h1></th>
-    <table border="1px"  style="border-collapse: collapse" >
-        <th style="background-color: red;color: white; width: 80px; height: 30px;">C.Nhật</th>
-        <th style="background-color: orange;color: white; width: 80px; height: 30px;">T.Hai</th>
-        <th style="background-color: orange;color: white; width: 80px; height: 30px;">T.Ba</th>
-        <th style="background-color: orange;color: white; width: 80px; height: 30px;">T.Tư</th>
-        <th style="background-color: orange;color: white; width: 80px; height: 30px;">T.Năm</th>
-        <th style="background-color: orange;color: white; width: 80px; height: 30px;">T.Sáu</th>
-        <th style="background-color: blue;color: white; width: 80px; height: 30px;">T.Bảy</th><br>    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="lich.css" />
+  </head>
+  <body>
+    <h1 class="thang">Tháng 10 - October</h1>
+    <table style="width: 500px">
+      <tr class="dong">
+        <td class="cn">C.nhat</td>
+        <td class="trongtuan">T.Hai</td>
+        <td class="trongtuan">T.Ba</td>
+        <td class="trongtuan">T.Tư</td>
+        <td class="trongtuan">T.Năm</td>
+        <td class="trongtuan">T.Sáu</td>
+        <td class="tbay">T.Bảy</td>
+      </tr>
+      <tr class="hang">
+        <td class="ngay0002">Sun</td>
+        <td class="center">Mon</td>
+        <td class="center">Tue</td>
+        <td class="center">Wed</td>
+        <td class="center">Thu</td>
+        <td class="center">Fri</td>
+        <td class="ngay0001">Sat</td>
+      </tr>
     </table>
-    <table>
-        <th style="color: red; width: 80px; height: 30px;">Son</th>
-        <th style="color: black; width: 80px; height: 30px;">Mon</th>
-        <th style="color: black; width: 80px; height: 30px;">Tue</th>
-        <th style="color: black; width: 80px; height: 30px;">Wed</th>
-        <th style="color: black; width: 80px; height: 30px;">Thu</th>
-        <th style="color: black; width: 80px; height: 30px;">Fri</th>
-        <th style="color: blue; width: 80px; height: 30px;">Sat</th>
+    <table
+      border="1px"
+      style="
+        border: 1px;
+        border-collapse: collapse;
+        width: 500px;
+        height: 200px;
+      "
+    >
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td class="center">1</td>
+        <td class="center">2</td>
+        <td class="ngay0001">3</td>
+      </tr>
+      <tr>
+        <td class="ngay0002">4</td>
+        <td class="center">5</td>
+        <td class="center">6</td>
+        <td class="center">7</td>
+        <td class="center">8</td>
+        <td class="center">9</td>
+        <td class="ngay0001">10</td>
+      </tr>
+      <tr>
+        <td class="ngay0002">11</td>
+        <td class="center">12</td>
+        <td class="center">13</td>
+        <td class="center">14</td>
+        <td class="center">15</td>
+        <td class="center">16</td>
+        <td class="ngay0001">17</td>
+      </tr>
+      <tr>
+        <td class="ngay0002">18</td>
+        <td class="center">19</td>
+        <td class="center">20</td>
+        <td class="center">21</td>
+        <td class="center">22</td>
+        <td class="center">23</td>
+        <td class="ngay0001">24</td>
+      </tr>
+      <tr>
+        <td class="ngay0002">25</td>
+        <td class="center">26</td>
+        <td class="center">27</td>
+        <td class="center">28</td>
+        <td class="center">29</td>
+        <td class="center">30</td>
+        <td class="ngay0001">31</td>
+      </tr>
     </table>
-    <table border="1px" style="border-collapse: collapse;border-collapse: collapse; width:80px; height: 30px;">
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th>1</th>
-            <th>2</th>
-            <th>3</th>
-        </tr>
-        <tr>
-            <th>4</th>
-            <th>5</th>
-            <th>6</th>
-            <th>7</th>
-            <th>8</th>
-            <th>9</th>
-            <th>10</th>
-        </tr>
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-    </table>
-</body>
+  </body>
 </html>
