--- a/HTML/BT-SimpleForm/BTtaobangnangcaoPart1.html
+++ b/HTML/BT-SimpleForm/BTtaobangnangcaoPart1.html
@@ -7,9 +7,8 @@
   </head>
   <body>
     <table
-      border="1PX"
-      style="background-color: orange"
-      style="border-collapse: collapse"
+      border="1px"
+      style="border: 1px; border-collapse: collapse; background-color: orange"
     >
       <tr>
         <th></th>
