--- a/HTML/BT-SimpleForm/BTtaobangnangcaoPart2.html
+++ b/HTML/BT-SimpleForm/BTtaobangnangcaoPart2.html
@@ -10,7 +10,7 @@
     <h1 class="thang">Tháng 10 - October</h1>
     <table style="width: 500px">
       <tr class="dong">
-        <td class="cn">C.nhat</td>
+        <td class="cn">C.Nhật</td>
         <td class="trongtuan">T.Hai</td>
         <td class="trongtuan">T.Ba</td>
         <td class="trongtuan">T.Tư</td>
